fix layout shift nav book button

--- a/app/components/Navbar/Navbar.module.scss
+++ b/app/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
 
 
 .navbar-button-container{
-  width: 18.8%;
+  width: 15%;
 
   button{
     background-color: $primary-color;
@@ -19,6 +19,7 @@
     border-radius: 5px;
     font-size: $font-size-mobile;
     font-family: $primary-font;
+    margin: 0 auto;
 }
 }
 .navbar-desktop{
@@ -33,8 +34,7 @@
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 0 1.4em;
-    // margin-top: 1em;
+    padding: 0 1rem;
 
     .logo{
       width: 300px;
